# dotfiles

./: .alias  .bashrc  .doingrc  .gitconfig  .gitignore  .i3status.conf  .install.sh.swp  .pentadactylrc  .taskrc  .tmux.conf  .vimrc  Dockerfile  README.md  alias  bashrc  devbox.json  dot_profile  dot_vimrc  dot_zshrc  executable_dot_yabairc  function  i3_config  i3config  install.sh  kitty.conf  pyproject.toml  secrets  vimrc
.vim/undodir/: %users%ugrad%tkuipers%.bashrc  %users%ugrad%tkuipers%.vimrc
configs/compton/: compton.conf
configs/i3/: config
configs/i3status/: config
configs/kitty/: kitty.conf
configs/polybar/: config  i3wmthemer_bar_launch.sh
configs/ranger/: bookmarks  history
configs/rofi/: config
configs/tizonia/: tizonia.conf
dot_poshthemes/: private_bubbles.omp.json
home/: .bashrc  .taskrc  .wezterm.lua
home/.config/: starship.toml
misc_configs/: vimrc
private_dot_config/alacritty/: alacritty.yml  alacritty.yml.tmpl
private_dot_config/fontconfig/: fonts.conf
private_dot_config/i3/: config
private_dot_config/kitty/: kitty.conf  symlink_theme.conf
script/: install.sh
scripts/: run_onchange_install-misc.sh.tmpl  run_onchange_install-nvm.sh.tmpl  run_onchange_install-vundle.sh.tmpl  run_onchange_install-wm.sh.tmpl  run_onchange_install_10-misc.sh.tmpl  run_onchange_install_20-wm.sh.tmpl  run_onchange_install_30-nvm.sh.tmpl  run_onchange_install_40-vim.sh.tmpl  run_onchange_install_50-ohmyposh.sh.tmpl  run_onchange_install_60-alacritty.sh.tmpl  run_onchange_install_70_fonts.sh.tmpl  run_onchange_install_80_grub_theme.sh.tmpl
(+103 files in other folders)
